syntax = "proto3";

package location;

service Location {
	rpc Read(Request) returns (Response) {}
	rpc Save(Entity) returns (Empty) {}
	rpc Search(Query) returns (Result) {}
}

message Empty {}

message Point {
        double lat = 1;
        double long = 2;
        int64 timestamp = 3;
}

message Entity {
        string id = 1;
        string type = 2;
        Point location = 3;
}

message Request {
	string id = 1;
}

message Response {
	Entity entity = 1;
}

message Query {
	Point center = 1;
	double radius = 2; // in meters
	string type = 3;
	int64 numEntities = 4;
}

message Result {
	repeated Entity entities = 1;
}
