syntax = "proto3";

package places;
option go_package = "./proto;places";

service Places {
	// Save a set of places
	rpc Save(SaveRequest) returns (SaveResponse) {}
	// Last places for a set of users
	rpc Last(LastRequest) returns (ListResponse) {}
	// Near returns the places near a point at a given time
	rpc Near(NearRequest) returns (ListResponse) {}	
	// Read places for a group of users between two points in time
	rpc Read(ReadRequest) returns (ListResponse) {}
}

message Location {
	string id = 1;
	string name = 2;
	map<string,string> metadata = 3;
	int64 timestamp = 4;
	double latitude = 5;
	double longitude = 6;
}

message SaveRequest {
	repeated Location places = 1;
}

message SaveResponse {}

message LastRequest {
	repeated string ids = 1;
}

message ListResponse {
	repeated Location places = 1;
}

message NearRequest {
	double latitude = 1;
	double longitude = 2;
	// radius to search within, units km
	double radius = 3;
}

message ReadRequest {
	repeated string ids = 1;
	int64 after = 2;
	int64 before = 3;
}
